--- a/sass/style.css
+++ b/sass/style.css
@@ -4,4 +4,8 @@
   -webkit-box-sizing: border-box;
           box-sizing: border-box;
 }
+
+body {
+  font-family: 'Rubik', sans-serif;
+}
 /*# sourceMappingURL=style.css.map */
