--- a/sass/style.css
+++ b/sass/style.css
@@ -7,5 +7,22 @@
 
 body {
   font-family: 'Rubik', sans-serif;
+  color: #fff;
+  background-color: #1c1c1c;
+  font-size: 0.938rem;
+}
+
+section {
+  height: 100vh;
+  display: -ms-grid;
+  display: grid;
+  place-items: center;
+}
+
+section .card {
+  position: relative;
+  width: 100%;
+  height: 240px;
+  background-color: #171717;
 }
 /*# sourceMappingURL=style.css.map */
