--- a/sass/style.scss
+++ b/sass/style.scss
@@ -5,4 +5,19 @@
 }
 body{
     font-family: 'Rubik', sans-serif;
+    color: #fff;
+    background-color: hsl(0, 0%, 11%);
+    font-size: 0.938rem;
+}
+section{
+    height: 100vh;
+    display: grid;
+    place-items: center;
+    // margin: 0 1.5rem;
+    .card{
+        position: relative;
+        width: 100%;
+        height: 240px;
+        background-color: hsl(0, 0%, 9%);
+    }
 }
