--- a/sass/style.css
+++ b/sass/style.css
@@ -17,6 +17,7 @@ section {
   display: -ms-grid;
   display: grid;
   place-items: center;
+  margin: 0 1.5rem;
 }
 
 section .card {
@@ -24,5 +25,18 @@ section .card {
   width: 100%;
   height: 240px;
   background-color: #171717;
+  padding: 1.5rem 2rem;
+  border-radius: 1.5rem;
+  display: -ms-grid;
+  display: grid;
+  -ms-grid-columns: (1fr)[2];
+      grid-template-columns: repeat(2, 1fr);
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+
+section .card .data p:first-child {
+  margin-bottom: 0.5rem;
 }
 /*# sourceMappingURL=style.css.map */
