--- a/sass/style.scss
+++ b/sass/style.scss
@@ -13,11 +13,22 @@ section{
     height: 100vh;
     display: grid;
     place-items: center;
-    // margin: 0 1.5rem;
+    margin: 0 1.5rem;
     .card{
         position: relative;
         width: 100%;
         height: 240px;
         background-color: hsl(0, 0%, 9%);
+        padding: 1.5rem 2rem;
+        border-radius: 1.5rem;
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+        align-items: center;
+        .data{
+            p:first-child{
+                margin-bottom: 0.5rem;
+            }
+        }
+
     }
 }
