--- a/sass/style.css
+++ b/sass/style.css
@@ -75,5 +75,18 @@ section .card .batteryPill {
 
 section .card .batteryPill .batteryLevel {
   position: absolute;
+  inset: 2px;
+  border-radius: 3rem;
+  overflow: hidden;
+}
+
+section .card .batteryPill .batteryLiquid {
+  position: absolute;
+  bottom: 0;
+  left: 0;
+  right: 0;
+  height: 36px;
+  background: -webkit-gradient(linear, left top, right top, color-stop(15%, #de250d), to(#f97d62));
+  background: linear-gradient(90deg, #de250d 15%, #f97d62 100%);
 }
 /*# sourceMappingURL=style.css.map */
