--- a/sass/style.scss
+++ b/sass/style.scss
@@ -54,6 +54,18 @@ section{
             justify-self: flex-end;
             .batteryLevel{
                 position: absolute;
+                inset: 2px;
+                border-radius: 3rem;
+                overflow: hidden;
+            }
+            .batteryLiquid{
+                position: absolute;
+                bottom: 0;
+                left: 0;
+                right: 0;
+                height: 36px;
+                background: linear-gradient(90deg, hsl(7,89%,46%) 15%,
+                hsl(11,93%,68%) 100%);
             }
 
         }
