--- a/sass/style.css
+++ b/sass/style.css
@@ -88,5 +88,7 @@ section .card .batteryPill .batteryLiquid {
   height: 36px;
   background: -webkit-gradient(linear, left top, right top, color-stop(15%, #de250d), to(#f97d62));
   background: linear-gradient(90deg, #de250d 15%, #f97d62 100%);
+  -webkit-box-shadow: inset -10px 0 12px rgba(0, 0, 0, 0.1), inset 12px 0 12px rgba(0, 0, 0, 0.15);
+          box-shadow: inset -10px 0 12px rgba(0, 0, 0, 0.1), inset 12px 0 12px rgba(0, 0, 0, 0.15);
 }
 /*# sourceMappingURL=style.css.map */
