--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,76 +1,95 @@
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
+* {
+  padding: 0;
+  margin: 0;
+  box-sizing: border-box;
 }
-body{
-    font-family: 'Rubik', sans-serif;
-    color: #fff;
-    background-color: hsl(0, 0%, 11%);
-    font-size: 0.938rem;
+body {
+  font-family: "Rubik", sans-serif;
+  color: #fff;
+  background-color: hsl(0, 0%, 11%);
+  font-size: 0.938rem;
 }
-section{
-    height: 100vh;
+section {
+  height: 100vh;
+  display: grid;
+  place-items: center;
+  margin: 0 1.5rem;
+  .card {
+    position: relative;
+    width: 100%;
+    height: 240px;
+    background-color: hsl(0, 0%, 9%);
+    padding: 1.5rem 2rem;
+    border-radius: 1.5rem;
     display: grid;
-    place-items: center;
-    margin: 0 1.5rem;
-    .card{
-        position: relative;
-        width: 100%;
-        height: 240px;
-        background-color: hsl(0, 0%, 9%);
-        padding: 1.5rem 2rem;
-        border-radius: 1.5rem;
-        display: grid;
-        grid-template-columns: repeat(2, 1fr);
-        align-items: center;
-        .data{
-            p:first-child{
-                margin-bottom: 0.5rem;
-            }
-            h1{
-                font-size: 2.75rem;
-                + p{
-                    position: absolute;
-                    bottom: 1.5rem;
-                    display: flex;
-                    align-items: center;
-                    column-gap: 0.5rem;
-                    font-size: 0.813rem;
-                    i{
-                        font-size: 1.25rem;
-                    }
-                }
-            }
+    grid-template-columns: repeat(2, 1fr);
+    align-items: center;
+    .data {
+      p:first-child {
+        margin-bottom: 0.5rem;
+      }
+      h1 {
+        font-size: 2.75rem;
+        + p {
+          position: absolute;
+          bottom: 1.5rem;
+          display: flex;
+          align-items: center;
+          column-gap: 0.5rem;
+          font-size: 0.813rem;
+          i {
+            font-size: 1.25rem;
+          }
         }
-        .batteryPill{
-            position: relative;
-            width: 75px;
-            height: 180px;
-            background-color: hsl(0, 0%, 9%);
-            box-shadow: inset 20px 0 48px hsl(0, 0%, 16%),
-            inset -4px 12px 48px hsl(0, 0%, 56%);
-            border-radius: 3rem;
-            justify-self: flex-end;
-            .batteryLevel{
-                position: absolute;
-                inset: 2px;
-                border-radius: 3rem;
-                overflow: hidden;
-            }
-            .batteryLiquid{
-                position: absolute;
-                bottom: 0;
-                left: 0;
-                right: 0;
-                height: 36px;
-                background: linear-gradient(90deg, hsl(7,89%,46%) 15%,
-                hsl(11,93%,68%) 100%);
-                box-shadow: inset -10px 0 12px hsla(0, 0%, 0%, 0.1),
-                        inset 12px 0 12px hsla(0, 0%, 0%, 0.15);
-            }
-
-        }
-
+      }
     }
+    .batteryPill {
+      position: relative;
+      width: 75px;
+      height: 180px;
+      background-color: hsl(0, 0%, 9%);
+      box-shadow: inset 20px 0 48px hsl(0, 0%, 16%),
+        inset -4px 12px 48px hsl(0, 0%, 56%);
+      border-radius: 3rem;
+      justify-self: flex-end;
+      .batteryLevel {
+        position: absolute;
+        inset: 2px;
+        border-radius: 3rem;
+        overflow: hidden;
+      }
+      .batteryLiquid {
+        position: absolute;
+        bottom: 0;
+        left: 0;
+        right: 0;
+        height: 36px;
+        background: linear-gradient(
+          90deg,
+          hsl(7, 89%, 46%) 15%,
+          hsl(11, 93%, 68%) 100%
+        );
+        box-shadow: inset -10px 0 12px hsla(0, 0%, 0%, 0.1),
+          inset 12px 0 12px hsla(0, 0%, 0%, 0.15);
+        transition: 0.3s;
+      }
+      .batteryLiquid::after {
+        content: " ";
+        position: absolute;
+        height: 8px;
+         background: linear-gradient(
+          90deg,
+          hsl(7, 89%, 46%) 15%,
+          hsl(11, 93%, 68%) 100%
+        );
+        box-shadow: inset 0 -3px 6px hsla(0, 0%, .2);
+        left: 0;
+        right: 0;
+        margin: 0 auto;
+        top: 4px;
+        border-radius: 50%;
+
+      }
+    }
+  }
 }
