--- a/sass/style.scss
+++ b/sass/style.scss
@@ -77,19 +77,30 @@ section {
         content: " ";
         position: absolute;
         height: 8px;
-         background: linear-gradient(
+        background: linear-gradient(
           90deg,
           hsl(7, 89%, 46%) 15%,
           hsl(11, 93%, 68%) 100%
         );
-        box-shadow: inset 0 -3px 6px hsla(0, 0%, .2);
+        box-shadow: inset 0 -3px 6px hsla(0, 0%, 0.2);
         left: 0;
         right: 0;
         margin: 0 auto;
         top: 4px;
         border-radius: 50%;
-
       }
     }
+  }
+  .green {
+    background: linear-gradient(90deg, hsl(92, 89%, 46%) 15%,
+    hsl(92, 90%,68%) 100%);
+  }
+  .orange {
+    background: linear-gradient(90deg, hsl(22, 89%, 46%) 15%,
+    hsl(54, 98%,45%) 100%);
+  }
+  .yellow {
+    background: linear-gradient(90deg, hsl(54, 89%, 46%) 15%,
+    hsl(92, 98%,45%) 100%);
   }
 }
