--- a/sass/style.scss
+++ b/sass/style.scss
@@ -95,12 +95,27 @@ section {
     background: linear-gradient(90deg, hsl(92, 89%, 46%) 15%,
     hsl(92, 90%,68%) 100%);
   }
-  .orange {
-    background: linear-gradient(90deg, hsl(22, 89%, 46%) 15%,
-    hsl(54, 98%,45%) 100%);
+  // Battery Charging Animation
+  .animated-green{
+      background: linear-gradient(90deg, hsl(92, 89%, 46%) 15%,
+    hsl(92, 90%,68%) 100%);
+    animation: animated-charging-battery 1.2s infinite alternate;  
   }
-  .yellow {
-    background: linear-gradient(90deg, hsl(54, 89%, 46%) 15%,
-    hsl(92, 98%,45%) 100%);
+  // Low Battery Animation
+  .animated-red{
+       background: linear-gradient(
+          90deg,
+          hsl(7, 89%, 46%) 15%,
+          hsl(11, 93%, 68%) 100%
+        );
+    animation: animated-low-battery 1.2s infinite alternate;  
   }
+//   .orange {
+//     background: linear-gradient(90deg, hsl(22, 89%, 46%) 15%,
+//     hsl(54, 98%,45%) 100%);
+//   }
+//   .yellow {
+//     background: linear-gradient(90deg, hsl(54, 89%, 46%) 15%,
+//     hsl(92, 98%,45%) 100%);
+//   }
 }
