--- a/sass/style.scss
+++ b/sass/style.scss
@@ -98,7 +98,7 @@ section {
   // Battery Charging Animation
   .animated-green{
       background: linear-gradient(90deg, hsl(92, 89%, 46%) 15%,
-    hsl(92, 90%,68%) 100%);
+    hsl(92, 90%,68%) 100%) ;
     animation: animated-charging-battery 1.2s infinite alternate;  
   }
   // Low Battery Animation
@@ -110,6 +110,28 @@ section {
         );
     animation: animated-low-battery 1.2s infinite alternate;  
   }
+  .animated-green, .animated-red, .green{
+    background-clip: text;
+      color: transparent;
+  }
+  @keyframes animated-charging-battery {
+     0%{
+         text-shadow: none;
+     } 
+     100%{
+         text-shadow: 0 0 6px hsl(92, 90%,68%);
+     }
+  }
+  @keyframes  animated-low-battery {
+     0%{
+         text-shadow: none;
+     } 
+     100%{
+         text-shadow: 0 0 8px hsl(7, 89%,46%);
+     }
+  }
+ 
+
 //   .orange {
 //     background: linear-gradient(90deg, hsl(22, 89%, 46%) 15%,
 //     hsl(54, 98%,45%) 100%);
