--- a/sass/style.scss
+++ b/sass/style.scss
@@ -82,7 +82,7 @@ section {
           hsl(7, 89%, 46%) 15%,
           hsl(11, 93%, 68%) 100%
         );
-        box-shadow: inset 0 -3px 6px hsla(0, 0%, 0.2);
+        // box-shadow: inset 0 -3px 6px hsla(0, 0%, 0.2);
         left: 0;
         right: 0;
         margin: 0 auto;
