--- a/sass/style.scss
+++ b/sass/style.scss
@@ -97,13 +97,13 @@ section {
   }
   // Battery Charging Animation
   .animated-green{
-      background: linear-gradient(90deg, hsl(92, 89%, 46%) 15%,
+      color: linear-gradient(90deg, hsl(92, 89%, 46%) 15%,
     hsl(92, 90%,68%) 100%) ;
     animation: animated-charging-battery 1.2s infinite alternate;  
   }
   // Low Battery Animation
   .animated-red{
-       background: linear-gradient(
+       color: linear-gradient(
           90deg,
           hsl(7, 89%, 46%) 15%,
           hsl(11, 93%, 68%) 100%
