--- a/sass/style.css
+++ b/sass/style.css
@@ -113,15 +113,13 @@ section .green {
 }
 
 section .animated-green {
-  background: -webkit-gradient(linear, left top, right top, color-stop(15%, #6ede0d), to(#a9f764));
-  background: linear-gradient(90deg, #6ede0d 15%, #a9f764 100%);
+  color: linear-gradient(90deg, #6ede0d 15%, #a9f764 100%);
   -webkit-animation: animated-charging-battery 1.2s infinite alternate;
           animation: animated-charging-battery 1.2s infinite alternate;
 }
 
 section .animated-red {
-  background: -webkit-gradient(linear, left top, right top, color-stop(15%, #de250d), to(#f97d62));
-  background: linear-gradient(90deg, #de250d 15%, #f97d62 100%);
+  color: linear-gradient(90deg, #de250d 15%, #f97d62 100%);
   -webkit-animation: animated-low-battery 1.2s infinite alternate;
           animation: animated-low-battery 1.2s infinite alternate;
 }
