--- a/sass/style.css
+++ b/sass/style.css
@@ -124,7 +124,9 @@ section .animated-red {
           animation: animated-low-battery 1.2s infinite alternate;
 }
 
-section .animated-green, section .animated-red, section .green {
+section .animated-green,
+section .animated-red,
+section .green {
   background-clip: text;
   color: transparent;
 }
@@ -163,5 +165,23 @@ section .animated-green, section .animated-red, section .green {
   100% {
     text-shadow: 0 0 8px #de250d;
   }
+}
+
+section .gradientRed,
+section .gradientRed::after {
+  background: -webkit-gradient(linear, left top, right top, color-stop(15%, #de250d), to(#f97d62));
+  background: linear-gradient(90deg, #de250d 15%, #f97d62 100%);
+}
+
+section .gradientOrange,
+section .gradientOrange::after {
+  background: -webkit-gradient(linear, left top, right top, color-stop(15%, #de590d), to(#e3cd02));
+  background: linear-gradient(90deg, #de590d 15%, #e3cd02 100%);
+}
+
+section .gradientGreen,
+section .gradientGreen::after {
+  background: -webkit-gradient(linear, left top, right top, color-stop(15%, #6ede0d), to(#a9f764));
+  background: linear-gradient(90deg, #6ede0d 15%, #a9f764 100%);
 }
 /*# sourceMappingURL=style.css.map */
