--- a/sass/style.scss
+++ b/sass/style.scss
@@ -92,52 +92,77 @@ section {
     }
   }
   .green {
-    background: linear-gradient(90deg, hsl(92, 89%, 46%) 15%,
-    hsl(92, 90%,68%) 100%);
+    background: linear-gradient(
+      90deg,
+      hsl(92, 89%, 46%) 15%,
+      hsl(92, 90%, 68%) 100%
+    );
   }
   // Battery Charging Animation
-  .animated-green{
-      color: linear-gradient(90deg, hsl(92, 89%, 46%) 15%,
-    hsl(92, 90%,68%) 100%) ;
-    animation: animated-charging-battery 1.2s infinite alternate;  
+  .animated-green {
+    color: linear-gradient(
+      90deg,
+      hsl(92, 89%, 46%) 15%,
+      hsl(92, 90%, 68%) 100%
+    );
+    animation: animated-charging-battery 1.2s infinite alternate;
   }
   // Low Battery Animation
-  .animated-red{
-       color: linear-gradient(
-          90deg,
-          hsl(7, 89%, 46%) 15%,
-          hsl(11, 93%, 68%) 100%
-        );
-    animation: animated-low-battery 1.2s infinite alternate;  
+  .animated-red {
+    color: linear-gradient(90deg, hsl(7, 89%, 46%) 15%, hsl(11, 93%, 68%) 100%);
+    animation: animated-low-battery 1.2s infinite alternate;
   }
-  .animated-green, .animated-red, .green{
+  .animated-green,
+  .animated-red,
+  .green {
     background-clip: text;
-      color: transparent;
+    color: transparent;
   }
   @keyframes animated-charging-battery {
-     0%{
-         text-shadow: none;
-     } 
-     100%{
-         text-shadow: 0 0 6px hsl(92, 90%,68%);
-     }
+    0% {
+      text-shadow: none;
+    }
+    100% {
+      text-shadow: 0 0 6px hsl(92, 90%, 68%);
+    }
   }
-  @keyframes  animated-low-battery {
-     0%{
-         text-shadow: none;
-     } 
-     100%{
-         text-shadow: 0 0 8px hsl(7, 89%,46%);
-     }
+  @keyframes animated-low-battery {
+    0% {
+      text-shadow: none;
+    }
+    100% {
+      text-shadow: 0 0 8px hsl(7, 89%, 46%);
+    }
   }
- 
+  // Color Change in Battery Level
+  .gradientRed,
+  .gradientRed::after {
+    background: linear-gradient(
+      90deg,
+      hsl(7, 89%, 46%) 15%,
+      hsl(11, 93%, 68%) 100%
+    );
+  }
+  .gradientOrange,
+  .gradientOrange::after {
+     background: linear-gradient(90deg, hsl(22, 89%, 46%) 15%,
+     hsl(54, 98%,45%) 100%);
+  }
+  .gradientGreen,
+  .gradientGreen::after {
+   background: linear-gradient(
+      90deg,
+      hsl(92, 89%, 46%) 15%,
+      hsl(92, 90%, 68%) 100%
+    );
+  }
 
-//   .orange {
-//     background: linear-gradient(90deg, hsl(22, 89%, 46%) 15%,
-//     hsl(54, 98%,45%) 100%);
-//   }
-//   .yellow {
-//     background: linear-gradient(90deg, hsl(54, 89%, 46%) 15%,
-//     hsl(92, 98%,45%) 100%);
-//   }
+  //   .orange {
+  //     background: linear-gradient(90deg, hsl(22, 89%, 46%) 15%,
+  //     hsl(54, 98%,45%) 100%);
+  //   }
+  //   .yellow {
+  //     background: linear-gradient(90deg, hsl(54, 89%, 46%) 15%,
+  //     hsl(92, 98%,45%) 100%);
+  //   }
 }
