got rid of unneecessary comments

--- a/sass/style.css
+++ b/sass/style.css
@@ -184,4 +184,10 @@ section .gradientGreen::after {
   background: -webkit-gradient(linear, left top, right top, color-stop(15%, #6ede0d), to(#a9f764));
   background: linear-gradient(90deg, #6ede0d 15%, #a9f764 100%);
 }
+
+section .gradientYellow,
+section .gradientYellow::after {
+  background: -webkit-gradient(linear, left top, right top, color-stop(15%, #dec90d), to(#6be302));
+  background: linear-gradient(90deg, #dec90d 15%, #6be302 100%);
+}
 /*# sourceMappingURL=style.css.map */
