--- a/sass/style.scss
+++ b/sass/style.scss
@@ -24,6 +24,10 @@ section {
     display: grid;
     grid-template-columns: repeat(2, 1fr);
     align-items: center;
+    @media screen and (min-width:444px){
+      width: 312px;
+      
+    }
     .data {
       p:first-child {
         margin-bottom: 0.5rem;
