--- a/sass/style.scss
+++ b/sass/style.scss
@@ -28,6 +28,10 @@ section {
       width: 312px;
       
     }
+    @media screen and (min-width:1024px){
+     zoom: 1.3;
+      
+    }
     .data {
       p:first-child {
         margin-bottom: 0.5rem;
