--- a/sass/style.scss
+++ b/sass/style.scss
@@ -131,7 +131,8 @@ section {
       text-shadow: none;
     }
     100% {
-      text-shadow: 0 0 6px hsl(92, 90%, 68%);
+      // text-shadow: 0 0 6px hsl(92, 90%, 68%);
+        text-shadow: none;
     }
   }
   @keyframes animated-low-battery {
