--- a/sass/style.css
+++ b/sass/style.css
@@ -135,6 +135,13 @@ section .animated-red {
           animation: animated-low-battery 1.2s infinite alternate;
 }
 
+section .animated-green,
+section .animated-red,
+section .green {
+  background-clip: text;
+  color: transparent;
+}
+
 @-webkit-keyframes animated-low-battery {
   0% {
     text-shadow: none;
