--- a/sass/style.scss
+++ b/sass/style.scss
@@ -121,12 +121,12 @@ section {
     color: linear-gradient(90deg, hsl(7, 89%, 46%) 15%, hsl(11, 93%, 68%) 100%);
     animation: animated-low-battery 1.2s infinite alternate;
   }
-  // .animated-green,
-  // .animated-red,
-  // .green {
-  //   background-clip: text;
-  //   color: transparent;
-  // }
+  .animated-green,
+  .animated-red,
+  .green {
+    background-clip: text;
+    color: transparent;
+  }
   // @keyframes animated-charging-battery {
   //   0% {
   //     text-shadow: none;
