--- a/sass/style.css
+++ b/sass/style.css
@@ -120,16 +120,13 @@ section .card .batteryPill .batteryLiquid::after {
 }
 
 section .green {
-  background: -webkit-gradient(linear, left top, right top, color-stop(15%, #6ede0d), to(#a9f764));
-  background: linear-gradient(90deg, #6ede0d 15%, #a9f764 100%);
+  color: linear-gradient(90deg, #6ede0d 15%, #a9f764 100%);
 }
 
 section .animated-green {
   color: linear-gradient(90deg, #6ede0d 15%, #a9f764 100%);
-  -webkit-animation: animated-charging-battery 1.2s  5 alternate;
-          animation: animated-charging-battery 1.2s  5 alternate;
-  -webkit-animation-fill-mode: alternate;
-          animation-fill-mode: alternate;
+  -webkit-animation: animated-charging-battery 1.2s infinite alternate;
+          animation: animated-charging-battery 1.2s infinite alternate;
 }
 
 section .animated-red {
@@ -142,7 +139,7 @@ section .animated-green,
 section .animated-red,
 section .green {
   background-clip: text;
-  -webkit-text-fill-color: transparent;
+  color: transparent;
 }
 
 @-webkit-keyframes animated-charging-battery {
