--- a/sass/style.css
+++ b/sass/style.css
@@ -120,13 +120,14 @@ section .card .batteryPill .batteryLiquid::after {
 }
 
 section .green {
-  color: linear-gradient(90deg, #6ede0d 15%, #a9f764 100%);
+  background: -webkit-gradient(linear, left top, right top, color-stop(15%, #6ede0d), to(#a9f764));
+  background: linear-gradient(90deg, #6ede0d 15%, #a9f764 100%);
 }
 
 section .animated-green {
   color: linear-gradient(90deg, #6ede0d 15%, #a9f764 100%);
-  -webkit-animation: animated-charging-battery 1.2s infinite alternate;
-          animation: animated-charging-battery 1.2s infinite alternate;
+  -webkit-animation: animated-charging-battery 1.2s  alternate;
+          animation: animated-charging-battery 1.2s  alternate;
 }
 
 section .animated-red {
