--- a/sass/style.scss
+++ b/sass/style.scss
@@ -115,7 +115,7 @@ section {
     );
    
   
-    animation: animated-charging-battery 1.2s  alternate;
+    animation: animated-charging-battery 1.2s ;
   }
   // Low Battery Animation
   .animated-red {
