--- a/sass/style.scss
+++ b/sass/style.scss
@@ -114,9 +114,9 @@ section {
       hsl(92, 90%, 68%) 100%
     );
    
-    
+
   
-    animation: animated-charging-battery 1.2s ;
+    // animation: animated-charging-battery 1.2s ;
   }
   // Low Battery Animation
   .animated-red {
