--- a/sass/style.scss
+++ b/sass/style.scss
@@ -108,12 +108,12 @@ section {
   }
   // Battery Charging Animation
   .animated-green {
- color: linear-gradient(
-      90deg,
-      hsl(92, 89%, 46%) 15%,
-      hsl(92, 90%, 68%) 100%
-    );
-   
+//  color: linear-gradient(
+//       90deg,
+//       hsl(92, 89%, 46%) 15%,
+//       hsl(92, 90%, 68%) 100%
+//     );
+       color: #39e939;
 
   
     // animation: animated-charging-battery 1.2s ;
@@ -122,6 +122,7 @@ section {
   .animated-red {
     color: linear-gradient(90deg, hsl(7, 89%, 46%) 15%, hsl(11, 93%, 68%) 100%);
     animation: animated-low-battery 1.2s infinite alternate;
+  
   }
   // .animated-green,
   // .animated-red,
