--- a/sass/style.css
+++ b/sass/style.css
@@ -98,8 +98,6 @@ section .card .batteryPill .batteryLiquid {
   left: 0;
   right: 0;
   height: 36px;
-  background: -webkit-gradient(linear, left top, right top, color-stop(15%, #de250d), to(#f97d62));
-  background: linear-gradient(90deg, #de250d 15%, #f97d62 100%);
   -webkit-box-shadow: inset -10px 0 12px rgba(0, 0, 0, 0.1), inset 12px 0 12px rgba(0, 0, 0, 0.15);
           box-shadow: inset -10px 0 12px rgba(0, 0, 0, 0.1), inset 12px 0 12px rgba(0, 0, 0, 0.15);
   -webkit-transition: 0.3s;
@@ -110,12 +108,12 @@ section .card .batteryPill .batteryLiquid::after {
   content: " ";
   position: absolute;
   height: 8px;
-  background: -webkit-gradient(linear, left top, right top, color-stop(15%, #de250d), to(#f97d62));
-  background: linear-gradient(90deg, #de250d 15%, #f97d62 100%);
+  -webkit-box-shadow: inset 0 -3px 6px rgba(0, 0, 0, 0.2);
+          box-shadow: inset 0 -3px 6px rgba(0, 0, 0, 0.2);
   left: 0;
   right: 0;
   margin: 0 auto;
-  top: 4px;
+  top: -4px;
   border-radius: 50%;
 }
 
@@ -124,7 +122,7 @@ section .green {
   background: linear-gradient(90deg, #6ede0d 15%, #a9f764 100%);
 }
 
-section .animated-green {
+section .greenCharge {
   color: #39e939;
 }
 
@@ -132,6 +130,12 @@ section .animated-red {
   color: linear-gradient(90deg, #de250d 15%, #f97d62 100%);
   -webkit-animation: animated-low-battery 1.2s infinite alternate;
           animation: animated-low-battery 1.2s infinite alternate;
+}
+
+section .animated-red,
+section .green {
+  background-clip: text;
+  color: transparent;
 }
 
 @-webkit-keyframes animated-charging-battery {
