--- a/sass/style.css
+++ b/sass/style.css
@@ -118,8 +118,7 @@ section .card .batteryPill .batteryLiquid::after {
 }
 
 section .green {
-  background: -webkit-gradient(linear, left top, right top, color-stop(15%, #6ede0d), to(#a9f764));
-  background: linear-gradient(90deg, #6ede0d 15%, #a9f764 100%);
+  color: #39e939;
 }
 
 section .greenCharge {
@@ -135,11 +134,6 @@ section .animated-red {
 section .animated-red {
   background-clip: text;
   color: #d47373;
-}
-
-section .green {
-  background-clip: text;
-  color: greenyellow;
 }
 
 @-webkit-keyframes animated-charging-battery {
